# PineMCP

./: .gitignore  .mcp.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  bench_v2.py  benchmark_comprehensive.py  benchmark_mcp.py  benchmark_results.md  benchmark_tools.py  bulk_import_github.py  check_health.ps1  check_profiler.py  config.json  data_completeness_check.py  dedup_chromadb.py  detect_duplicates.py  discover_entries.py  duplication_report.json  fix_categories.py  index_docs.py  index_profiling_page.py  index_user_docs.py  install_nssm.ps1  merge_and_index.py  parse_docs.py  pine_linter.py  pinescript_chunks.json  pinescript_mcp.py  promote_live_to_local.py  pyproject.toml  quick_audit_report.json  render.yaml  requirements.txt  run.sh  scrape_entries.py  (+10 more)
.claude/: settings.json
.claude/agents/: mcp-auditor.md  mcp-reviewer.md  mcp-tester.md  pine-auditor.md  pine-builder.md  pine-debugger.md  pine-validator.md
.claude/commands/: pine.md
.github/workflows/: ci.yml  release.yml  test.yml
.playwright-mcp/: page-2026-04-02T21-27-35-163Z.yml  page-2026-04-02T21-27-47-010Z.yml  page-2026-04-02T21-28-55-747Z.yml
bench/: bench_v2.py  benchmark_comprehensive.py
core/: _rtstate.py  build_db.py  caches.py  config.py  db.py  embeddings.py  hot_cache.py  optimizer.py  pine_facade.py
data/: pine_merged_entries.json  user_docs_chunks.json
data/pine-templates/: README.md  indicator_base.pine  snippets.pine  strategy_base.pine
data/user_docs/: alerts.txt  arrays.txt  bar_states.txt  built_ins.txt  chart_information.txt  conditional_structures.txt  debugging.txt  declaration_statements.txt  enums.txt  errors_CE10101.txt  errors_CW10003.txt  errors_RE10139.txt  errors_RE10143.txt  errors_overview.txt  execution_model.txt  faq_alerts.txt  faq_data_structures.txt  faq_functions.txt  faq_general.txt  faq_indicators.txt  faq_other_data.txt  faq_programming.txt  faq_strategies.txt  faq_strings_formatting.txt  faq_techniques.txt  faq_times_dates.txt  faq_variables_operators.txt  faq_visuals.txt  identifiers.txt  inputs.txt  libraries.txt  limitations.txt  loops.txt  maps.txt  matrices.txt  methods.txt  migration_overview.txt  non_standard_charts_data.txt  objects.txt  operators.txt  (+33 more)
docs/: AUDIT_SUMMARY.md  CLAUDE_CODE_INTEGRATION.md  ERROR_RECOVERY_GUIDE.md  MODIFIED_FUNCTIONS_SUMMARY.md  PERFORMANCE_REPORT.md  WORKFLOW_OPTIMIZATION_GUIDE.md  benchmark_results.md
docs/dev/: AUDIT_SUMMARY.md  benchmark_results.md
formatters/: entry.py  errors.py
launchd/: com.pinescript.mcp.plist
pipeline/: dedup_batch2.py  dedup_chromadb.py  discover_entries.py  index_docs.py  index_user_docs.py  merge_and_index.py  parse_docs.py  promote_live_to_local.py  scrape_entries.py
scripts/: continuous_verification.py  detect_duplicates.py  fix_data_gaps.py  fix_plot_functions.py  fix_returns_field.py  install_daemon.sh  quick_audit.py  self_verify.py  self_verify_simple.py  simple_audit.py  targeted_ingests.py  test_error_recovery.py  test_lookup_debug.py  uninstall_daemon.sh  validate_file.py
templates/: indicators.py  v5_migration.py
tests/: conftest.py  test_codegen.py  test_context.py  test_db.py  test_helpers.py  test_hot_cache.py  test_lookup.py  test_opt_rules_060.py  test_opt_rules_069.py  test_opt_rules_080.py  test_optimizer.py  test_optimizer_integration.py  test_pine_facade.py  test_search.py  test_validation.py
tools/: codegen.py  context.py  lookup.py  optimization.py  search.py  validation.py
(+33 files in other folders)
