[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinemcp"
version = "1.0.5"
description = "PineScript v6 MCP server - 6 tools for docs lookup, code validation, and code generation"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "TheFractalyst" }]
keywords = ["mcp", "pinescript", "tradingview", "indicators", "strategies"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "fastmcp>=3.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "rapidfuzz>=3.0.0",
    "xxhash>=3.0.0",
    "starlette>=0.36.0",
]

[project.optional-dependencies]
pipeline = [
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "fake-useragent>=1.5.0",
    "tqdm>=4.66.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/TheFractalyst/PineMCP"
Repository = "https://github.com/TheFractalyst/PineMCP"
Issues = "https://github.com/TheFractalyst/PineMCP/issues"

[project.scripts]
pinemcp = "server:main"

[tool.setuptools]
py-modules = ["server"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "tools*", "formatters*", "templates*", "pipeline*", "data*", "assets*"]
namespaces = false

[tool.setuptools.package-data]
"data" = ["*.json"]
"assets" = ["*.svg"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
